fix: file relative path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vet</title>
-  <link rel="stylesheet" href="slyles/main.css">
+  <link rel="stylesheet" href="./slyles/main.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
       <div class="main">
         <div class="main__text">
           <h1 class="main__title">Айболит - круглосуточная ветклиника</h1>
-          <a href="/record.html" class="main__link">Записаться</a>
+          <a href="./record.html" class="main__link">Записаться</a>
           <ul class="social main__social">
             <li class="social__item">
               <a href="#" target="_blank" class="social__link">
@@ -89,7 +89,7 @@
           </ul>
         </div>
         <div class="main__image">
-          <img src="/img/dog.png" alt="dog">
+          <img src="./img/dog.png" alt="dog">
         </div>
       </div>
     </div>
@@ -324,12 +324,12 @@
       <div class="history-people">
         <h2 class="history__title">Наши специалисты</h2>
         <div class="history-people-list">
-          <img src="/img/specialist.png" alt="Хирург" title="Хирург" />
-          <img src="/img/specialist.png" alt="Стоматолог" />
-          <img src="/img/specialist.png" alt="Ортопед" />
-          <img src="/img/specialist.png" alt="Терапевт" />
-          <img src="/img/specialist.png" alt="Невролог" />
-          <img src="/img/specialist.png" alt="Гематолог" />
+          <img src="./img/specialist.png" alt="Хирург" title="Хирург" />
+          <img src="./img/specialist.png" alt="Стоматолог" />
+          <img src="./img/specialist.png" alt="Ортопед" />
+          <img src="./img/specialist.png" alt="Терапевт" />
+          <img src="./img/specialist.png" alt="Невролог" />
+          <img src="./img/specialist.png" alt="Гематолог" />
         </div>
         <a href="#" class="history__link">Посмотреть всех
           <svg class="history__img" viewBox="0 0 20 24" xmlns="http://www.w3.org/2000/svg">
@@ -455,7 +455,7 @@
     <div class="container">
       <div class="counter__wrap">
         <h2 class="counter__title">1 150 000</h2>
-        <img class="counter__image" src="/img/bird.png" alt="bird">
+        <img class="counter__image" src="./img/bird.png" alt="bird">
       </div>
       <p class="counter__subtitle">питомцам мы помогли за 18 лет работы</p>
     </div>
@@ -471,8 +471,8 @@
         </div>
       </div>
       <div class="app__image">
-        <img class="app__dog" src="/img/Dogap.png" alt="Dog">
-        <img class="app__screen" src="/img/app.png" alt="App">
+        <img class="app__dog" src="./img/Dogap.png" alt="Dog">
+        <img class="app__screen" src="./img/app.png" alt="App">
       </div>
     </div>
   </section>
@@ -483,7 +483,7 @@
         <div class="footer-links">
           <div class="footer-nav">
             <div class="footer-nav__logo">
-              <a href="#" class="footer__logo"><img src="/img/logo_footer.svg" alt=""></a>
+              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt=""></a>
             </div>
             <div class="footer-columns">
               <a class="footer-columns__link" href="#">Политика конфиденциальности в отношении обработки персональных
@@ -511,8 +511,8 @@
 
         <div class="footer-contacts">
           <div class="download footer-contacts__download">
-            <a href="#"><img class="download__img" src="/img/appstore.svg" alt="Appstore"></a>
-            <a href="#"><img class="download__img" src="/img/googleplay.svg" alt="Googleplay"></a>
+            <a href="#"><img class="download__img" src="./img/appstore.svg" alt="Appstore"></a>
+            <a href="#"><img class="download__img" src="./img/googleplay.svg" alt="Googleplay"></a>
           </div>
 
           <div class="footer-social">
