--- a/historyvet.html
+++ b/historyvet.html
@@ -68,7 +68,7 @@
 
           <div class="history-block">
             <div class="history-block-link">
-              <a class="section-record__back" href="/index.html">
+              <a class="section-record__back" href="index.html">
                 <svg class="section-record__img" width="20" height="24" viewBox="0 0 20 24" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6.57129 12C6.57129 12.2151 6.65532 12.4301 6.82303 12.5941L12.1033 17.7538C12.4391 18.0821 12.9837 18.0821 13.3195 17.7538C13.6552 17.4257 13.6552 16.8937 13.3195 16.5654L8.64725 12L13.3193 7.43459C13.6551 7.10636 13.6551 6.57436 13.3193 6.24629C12.9836 5.9179 12.439 5.9179 12.1031 6.24629L6.82287 11.406C6.65513 11.57 6.57129 11.785 6.57129 12Z"/>
                 </svg>
@@ -78,7 +78,7 @@
             <div class="history-block-text">
               <div class="block-page">
                 <div class="history-block-image">
-                  <img src="/img/historyvet/01.jpg" alt="Кот">
+                  <img src="./img/historyvet/01.jpg" alt="Кот">
                 </div>
                 <h3 class="history-block__title">Подзаголовок 1</h3>
                 <p>Терапия - область гуманной и ветеринарной медицины, занимающаяся непосредственно лечением патологий, облегчением состояния больного и устранением симптомов заболеваний.</p>
@@ -99,8 +99,8 @@
                 <h3 class="history-block__title">Подзаголовок 2</h3>
                 <p>В нашей клинике имеются как врачи-терапевты общей практики, так и узкие специалисты по ряду перечисленных областей, что дает возможность излечивать тяжелые и редкие случаи патологий.</p>
                 <div class="history-block-image">
-                  <img src="/img/historyvet/02.jpg" alt="Котик">
-                  <img src="/img/historyvet/03.jpg" alt="Собака">
+                  <img src="./img/historyvet/02.jpg" alt="Котик">
+                  <img src="./img/historyvet/03.jpg" alt="Собака">
                 </div>
                 <p>Врач-терапевт подходит к лечению животного комплексно, предварительно изучив его анамнез, учитывая возраст, пол, породу, наличие хронических болезней, условия содержания, типа кормления, оценив общее состояние питомца, полностью осмотрев его и назначив необходимую диагностику и соответствующее лечение.</p>
                 <p>Врачи клиники имеют широкий спектр диагностических возможностей, что является идеальным условием для постановки точного диагноза, а значит и назначения того лечения, которое наиболее эффективно справится с данным конкретным клиническим случаем.</p>
@@ -124,7 +124,7 @@
         <div class="footer-links">
           <div class="footer-nav">
             <div class="footer-nav__logo">
-              <a href="#" class="footer__logo"><img src="/img/logo_footer.svg" alt=""></a>
+              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt=""></a>
             </div>
             <div class="footer-columns">
               <a class="footer-columns__link" href="#">Политика конфиденциальности в отношении обработки персональных
@@ -152,8 +152,8 @@
 
         <div class="footer-contacts">
           <div class="download footer-contacts__download">
-            <a href="#"><img class="download__img" src="/img/appstore.svg" alt="Appstore"></a>
-            <a href="#"><img class="download__img" src="/img/googleplay.svg" alt="Googleplay"></a>
+            <a href="#"><img class="download__img" src="./img/appstore.svg" alt="Appstore"></a>
+            <a href="#"><img class="download__img" src="./img/googleplay.svg" alt="Googleplay"></a>
           </div>
 
           <div class="footer-social">
