--- a/pay.html
+++ b/pay.html
@@ -54,7 +54,7 @@
             <h2 class="section__title">Запись на прием</h2>
           </div>
           <div class="section-record-form">
-            <a class="section-record__back" href="/record.html">
+            <a class="section-record__back" href="record.html">
               <svg class="section-record__img" width="20" height="24" viewBox="0 0 20 24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M6.57129 12C6.57129 12.2151 6.65532 12.4301 6.82303 12.5941L12.1033 17.7538C12.4391 18.0821 12.9837 18.0821 13.3195 17.7538C13.6552 17.4257 13.6552 16.8937 13.3195 16.5654L8.64725 12L13.3193 7.43459C13.6551 7.10636 13.6551 6.57436 13.3193 6.24629C12.9836 5.9179 12.439 5.9179 12.1031 6.24629L6.82287 11.406C6.65513 11.57 6.57129 11.785 6.57129 12Z"/>
               </svg>
@@ -83,7 +83,7 @@
         <div class="footer-links">
           <div class="footer-nav">
             <div class="footer-nav__logo">
-              <a href="#" class="footer__logo"><img src="/img/logo_footer.svg" alt=""></a>
+              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt=""></a>
             </div>
             <div class="footer-columns">
               <a class="footer-columns__link" href="#">Политика конфиденциальности в отношении обработки персональных
@@ -111,8 +111,8 @@
 
         <div class="footer-contacts">
           <div class="download footer-contacts__download">
-            <a href="#"><img class="download__img" src="/img/appstore.svg" alt="Appstore"></a>
-            <a href="#"><img class="download__img" src="/img/googleplay.svg" alt="Googleplay"></a>
+            <a href="#"><img class="download__img" src="./img/appstore.svg" alt="Appstore"></a>
+            <a href="#"><img class="download__img" src="./img/googleplay.svg" alt="Googleplay"></a>
           </div>
 
           <div class="footer-social">
