fix: file relative path

--- a/pay.html
+++ b/pay.html
@@ -27,7 +27,7 @@
                 <a href="#" class="sub-header-list__link">Коллектив</a>
               </li>
               <li>
-                <a href="#" class="sub-header-list__link">История компании</a>
+                <a href="historyvet.html" class="sub-header-list__link">История компании</a>
               </li>
             </ul>
           </li>
@@ -91,7 +91,7 @@
               <ul class="footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Главная</a></li>
                 <li class="footer-nav-list__item"><a href="#">Услуги и цены</a></li>
-                <li class="footer-nav-list__item"><a href="#">История компании</a></li>
+                <li class="footer-nav-list__item"><a href="historyvet.html">История компании</a></li>
                 <li class="footer-nav-list__item"><a href="#">Наши специалисты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Вакансии</a></li>
                 <li class="footer-nav-list__item"><a href="#">Реквизиты</a></li>
