--- a/record.html
+++ b/record.html
@@ -26,7 +26,7 @@
                 <a href="#" class="sub-header-list__link">Коллектив</a>
               </li>
               <li>
-                <a href="#" class="sub-header-list__link">История компании</a>
+                <a href="historyvet.html" class="sub-header-list__link">История компании</a>
               </li>
             </ul>
           </li>
@@ -61,7 +61,7 @@
             </a>
             <ul class="section-record-list">
               <li>
-                <a class="section-record__link" href="/pay.html">
+                <a class="section-record__link" href="pay.html">
                   <span>Онлайн-консультация</span>
                   <span>2000 ₽</span>
                 </a>
