--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="container header-wrap">
-      <a href="index.html" class="header__logo"></a>
+      <a href="index.html"><img class="header__logo" src="./img/logo.svg" alt="Логотип"></a>
       <nav class="header-menu">
         <ul class="header-list">
           <li class="header-list__item">
@@ -466,8 +466,8 @@
       <div class="app__text">
         <h2 class="app__title">Удобное приложение для питомцев и их хозяев</h2>
         <div class="download">
-          <a href="#" class="download__link download__appstore"></a>
-          <a href="#" class="download__link download__googleplay"></a>
+          <a href="#"><img class="download__link" src="./img/appstore.svg" alt=""></a>
+          <a href="#"><img class="download__link" src="./img/googleplay.svg" alt=""></a>
         </div>
       </div>
       <div class="app__image">
@@ -483,21 +483,22 @@
         <div class="footer-links">
           <div class="footer-nav">
             <div class="footer-nav__logo">
-              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt=""></a>
+              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt="Логотип"></a>
             </div>
             <div class="footer-columns">
-              <a class="footer-columns__link" href="#">Политика конфиденциальности в отношении обработки персональных
-                данных</a>
+              <a class="footer-columns__link" href="#">
+                Политика конфиденциальности в отношении обработки персональных данных
+              </a>
               <ul class="list footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Главная</a></li>
                 <li class="footer-nav-list__item"><a href="#">Услуги и цены</a></li>
-                <li class="footer-nav-list__item"><a href="#">История компании</a></li>
+                <li class="footer-nav-list__item"><a href="historyvet.html">История компании</a></li>
                 <li class="footer-nav-list__item"><a href="#">Наши специалисты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Вакансии</a></li>
                 <li class="footer-nav-list__item"><a href="#">Реквизиты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Онлайн-оплата</a></li>
               </ul>
-              <ul class="footer-nav-list">
+              <ul class="list footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Отзывы</a></li>
                 <li class="footer-nav-list__item"><a href="#">Контакты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Груминг-салон</a></li>
