fix: file relative path

--- a/pay.html
+++ b/pay.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="container header-wrap">
-      <a href="index.html" class="header__logo"></a>
+      <a href="index.html"><img class="header__logo" src="./img/logo.svg" alt="Логотип"></a>
       <nav class="header-menu">
         <ul class="header-list">
           <li class="header-list__item">
@@ -83,12 +83,13 @@
         <div class="footer-links">
           <div class="footer-nav">
             <div class="footer-nav__logo">
-              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt=""></a>
+              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt="Логотип"></a>
             </div>
             <div class="footer-columns">
-              <a class="footer-columns__link" href="#">Политика конфиденциальности в отношении обработки персональных
-                данных</a>
-              <ul class="footer-nav-list">
+              <a class="footer-columns__link" href="#">
+                Политика конфиденциальности в отношении обработки персональных данных
+              </a>
+              <ul class="list footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Главная</a></li>
                 <li class="footer-nav-list__item"><a href="#">Услуги и цены</a></li>
                 <li class="footer-nav-list__item"><a href="historyvet.html">История компании</a></li>
@@ -97,7 +98,7 @@
                 <li class="footer-nav-list__item"><a href="#">Реквизиты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Онлайн-оплата</a></li>
               </ul>
-              <ul class="footer-nav-list">
+              <ul class="list footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Отзывы</a></li>
                 <li class="footer-nav-list__item"><a href="#">Контакты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Груминг-салон</a></li>
@@ -156,9 +157,8 @@
             </ul>
           </div>
 
-          
           <div class="footer-mail">
-            <ul class="footer-mail__list">
+            <ul class="list footer-mail__list">
               <li class="footer-mail__item">
                 <a href="#">aibolit31.ru</a>
               </li>
