--- a/record.html
+++ b/record.html
@@ -10,7 +10,7 @@
 <body class="record-page">
   <header class="header">
     <div class="container header-wrap">
-      <a href="index.html" class="header__logo"></a>
+      <a href="index.html"><img class="header__logo" src="./img/logo.svg" alt="Логотип"></a>
       <nav class="header-menu">
         <ul class="header-list">
           <li class="header-list__item">
@@ -85,21 +85,22 @@
         <div class="footer-links">
           <div class="footer-nav">
             <div class="footer-nav__logo">
-              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt=""></a>
+              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt="Логотип"></a>
             </div>
             <div class="footer-columns">
-              <a class="footer-columns__link" href="#">Политика конфиденциальности в отношении обработки персональных
-                данных</a>
-              <ul class="footer-nav-list">
+              <a class="footer-columns__link" href="#">
+                Политика конфиденциальности в отношении обработки персональных данных
+              </a>
+              <ul class="list footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Главная</a></li>
                 <li class="footer-nav-list__item"><a href="#">Услуги и цены</a></li>
-                <li class="footer-nav-list__item"><a href="#">История компании</a></li>
+                <li class="footer-nav-list__item"><a href="historyvet.html">История компании</a></li>
                 <li class="footer-nav-list__item"><a href="#">Наши специалисты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Вакансии</a></li>
                 <li class="footer-nav-list__item"><a href="#">Реквизиты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Онлайн-оплата</a></li>
               </ul>
-              <ul class="footer-nav-list">
+              <ul class="list footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Отзывы</a></li>
                 <li class="footer-nav-list__item"><a href="#">Контакты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Груминг-салон</a></li>
@@ -158,9 +159,8 @@
             </ul>
           </div>
 
-          
           <div class="footer-mail">
-            <ul class="footer-mail__list">
+            <ul class="list footer-mail__list">
               <li class="footer-mail__item">
                 <a href="#">aibolit31.ru</a>
               </li>
@@ -173,5 +173,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
