--- a/historyvet.html
+++ b/historyvet.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <div class="container header-wrap">
-      <a href="index.html" class="header__logo"></a>
+      <a href="index.html"><img class="header__logo" src="./img/logo.svg" alt="Логотип"></a>
       <nav class="header-menu">
         <ul class="header-list">
           <li class="header-list__item">
@@ -55,13 +55,13 @@
             <h2 class="section__title">История компании</h2>
             <ul class="list nav-history_list">
               <li class="nav-history__item">
-                <a href="#">Подзаголовок 1</a>
+                <a href="#subtitle01">Подзаголовок 1</a>
               </li>
               <li class="nav-history__item">
-                <a href="#">Подзаголовок 2</a>
+                <a href="#subtitle02">Подзаголовок 2</a>
               </li>
               <li class="nav-history__item">
-                <a href="#">Подзаголовок 3</a>
+                <a href="#subtitle03">Подзаголовок 3</a>
               </li>
             </ul>
           </div>
@@ -80,7 +80,7 @@
                 <div class="history-block-image">
                   <img src="./img/historyvet/01.jpg" alt="Кот">
                 </div>
-                <h3 class="history-block__title">Подзаголовок 1</h3>
+                <h3 id="subtitle01" class="history-block__title">Подзаголовок 1</h3>
                 <p>Терапия - область гуманной и ветеринарной медицины, занимающаяся непосредственно лечением патологий, облегчением состояния больного и устранением симптомов заболеваний.</p>
                 <p>Терапевтическое отделение клиники Айболит занимается диагностикой и лечением следующих болезней:</p>
                 <ul class="list history-block__list">
@@ -91,12 +91,12 @@
                   <li>органов мочевыделительной системы</li>
                   <li>эндокринной системы;</li>
                   <li>нарушения обмена веществ;</li>
-                  <li>кожи и ее производных</li>
+                  <li>кожи и ее производных.</li>
                 </ul>
               </div>
 
               <div class="block-page">
-                <h3 class="history-block__title">Подзаголовок 2</h3>
+                <h3 id="subtitle02" class="history-block__title">Подзаголовок 2</h3>
                 <p>В нашей клинике имеются как врачи-терапевты общей практики, так и узкие специалисты по ряду перечисленных областей, что дает возможность излечивать тяжелые и редкие случаи патологий.</p>
                 <div class="history-block-image">
                   <img src="./img/historyvet/02.jpg" alt="Котик">
@@ -108,7 +108,7 @@
                 <ul class="list history-block__list">
                   <li>гематологический и биохимический анализы крови;</li>
                   <li>исследование Т4 и кортизол;</li>
-                  <li>ультразвуковое исследование брюшной полости и сердца;</li>
+                  <li>ультразвуковое исследование брюшной полости и сердца.</li>
                 </ul>
               </div>
             </div>
@@ -124,21 +124,22 @@
         <div class="footer-links">
           <div class="footer-nav">
             <div class="footer-nav__logo">
-              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt=""></a>
+              <a href="#" class="footer__logo"><img src="./img/logo_footer.svg" alt="Логотип"></a>
             </div>
             <div class="footer-columns">
-              <a class="footer-columns__link" href="#">Политика конфиденциальности в отношении обработки персональных
-                данных</a>
-              <ul class="footer-nav-list">
+              <a class="footer-columns__link" href="#">
+                Политика конфиденциальности в отношении обработки персональных данных
+              </a>
+              <ul class="list footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Главная</a></li>
                 <li class="footer-nav-list__item"><a href="#">Услуги и цены</a></li>
-                <li class="footer-nav-list__item"><a href="#">История компании</a></li>
+                <li class="footer-nav-list__item"><a href="historyvet.html">История компании</a></li>
                 <li class="footer-nav-list__item"><a href="#">Наши специалисты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Вакансии</a></li>
                 <li class="footer-nav-list__item"><a href="#">Реквизиты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Онлайн-оплата</a></li>
               </ul>
-              <ul class="footer-nav-list">
+              <ul class="list footer-nav-list">
                 <li class="footer-nav-list__item"><a href="#">Отзывы</a></li>
                 <li class="footer-nav-list__item"><a href="#">Контакты</a></li>
                 <li class="footer-nav-list__item"><a href="#">Груминг-салон</a></li>
@@ -198,7 +199,7 @@
           </div>
 
           <div class="footer-mail">
-            <ul class="footer-mail__list">
+            <ul class="list footer-mail__list">
               <li class="footer-mail__item">
                 <a href="#">aibolit31.ru</a>
               </li>
